fix: gap between elements in modal-window block

--- a/shelter/src/style/components/_modal-window.scss
+++ b/shelter/src/style/components/_modal-window.scss
@@ -87,7 +87,6 @@
   margin: 50px 20px 0 0;
   display: flex;
   flex-direction: column;
-  justify-content: space-between;
   gap: 40px;
   ul{
     margin: 0;
